# classifieds

./: .continueignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  README.md  app.py  classifieds.service  config.py  conversation_history.txt  copilot-notes.md  docker-compose.yml  forms.py  ldap_auth.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: alembic-migrations.instructions.md  javascript.instructions.md  jinja2-templates.instructions.md  project-safety.instructions.md  python-flask.instructions.md
.github/prompts/: plan-cycleProtection.prompt.md  (+5 more)
.legacy-requirements/: requirements.txt
app/: __init__.py  config.py  forms.py  ldap_auth.py  models.py
docs/: CHANGELOG.md  CODE_STYLE.md  DATABASE_SCHEMA.md  README.md  TODO.md  UV_QUICK_REFERENCE.md  dependency_licenses.md  tree.md
resources/: .env.example  baseline-versions.txt  populate_items_with_files.sql  pyproject.toml.backup  uv_lock_extras.md
routes/: admin.py  auth.py  categories.py  errors.py  items.py  listings.py  users.py
scripts/: check_licenses.py  test_reserved_names.py
templates/: admin_categories.html  admin_category_form.html  admin_dashboard.html  admin_items.html  admin_listings.html  admin_settings.html  admin_type_form.html  admin_types.html  admin_users.html  base.html  category_manage.html  error.html  forgot_password.html  index.html  item_detail.html  item_form.html  listing_detail.html  listing_form.html  login.html  register.html  reset_password.html  user_edit.html  user_profile.html
tests/: conftest.py  test_auth.py  test_category_cycle_protection.py  test_listings.py  test_syntax.py  test_users_routes.py
(+141 files in other folders)
